Adjust examples for new api

--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -5,6 +5,10 @@
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
+  <main id="main">
+
+  </main>
+  <img src="images/pure.jpg" alt="">
   <script src="/js/app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
