--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Vanilla test</title>
+  <title>Simple Wright Example</title>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
   <main id="main">
 
   </main>
-  <img src="images/pure.jpg" alt="">
+  <iframe width="420" height="315" src="https://www.youtube.com/embed/oHg5SJYRHA0?autoplay=1" frameborder="0" allowfullscreen></iframe>
   <script src="/js/app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
