More work on the examples

--- a/examples/mithril/index.html
+++ b/examples/mithril/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>Mithril Wright Example</title>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <script src="node_modules/mithril/mithril.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-
 </body>
 </html>
