Clean up mithril sample

--- a/examples/mithril/index.html
+++ b/examples/mithril/index.html
@@ -5,6 +5,6 @@
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
-  <script src="/js/app.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/js/app.js" type="module" charset="utf-8"></script>
 </body>
 </html>
