--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -9,6 +9,6 @@
 
   </main>
   <iframe width="420" height="315" src="https://www.youtube.com/embed/oHg5SJYRHA0?autoplay=1" frameborder="0" allowfullscreen></iframe>
-  <script src="/js/app.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/app.js" type="module" charset="utf-8"></script>
 </body>
 </html>
